// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SetForm Rendering Tests No data 1`] = `
<div
  className="container"
>
  <form
    className=""
    onSubmit={[Function]}
  >
    <div
      className="d-flex align-items-center mb-3 input-group"
    >
      <span
        className="input-group-text"
      >
        Reps
      </span>
      <input
        aria-label="reps"
        className="form-control"
        onChange={[Function]}
        type="text"
        value=""
      />
      <span
        className="input-group-text"
      >
        Weight
      </span>
      <input
        aria-label="weight"
        className="form-control"
        onChange={[Function]}
        type="text"
        value=""
      />
      <button
        aria-label="setSubmit"
        className="btn btn-outline-secondary"
        disabled={false}
        type="submit"
      >
        Add Set
      </button>
    </div>
  </form>
</div>
`;

exports[`SetForm Rendering Tests With Data 1`] = `
<div
  className="container"
>
  <form
    className=""
    onSubmit={[Function]}
  >
    <div
      className="d-flex align-items-center mb-3 input-group"
    >
      <span
        className="input-group-text"
      >
        Reps
      </span>
      <input
        aria-label="reps"
        className="form-control"
        onChange={[Function]}
        type="text"
        value="20"
      />
      <span
        className="input-group-text"
      >
        Weight
      </span>
      <input
        aria-label="weight"
        className="form-control"
        onChange={[Function]}
        type="text"
        value="200"
      />
      <button
        aria-label="setSubmit"
        className="btn btn-outline-secondary"
        disabled={false}
        type="submit"
      >
        Add Set
      </button>
    </div>
  </form>
</div>
`;
